# pose_estimation

./: CMakeLists.txt  exampleCall.cpp  package.xml
config/: ros_params.yaml
launch/: pose_estimation.launch.py
peInterface/: EKFCorrectorAdditive.cpp  EKFCorrectorAdditive.h  EKFPredictorAdditive.cpp  EKFPredictorAdditive.h  PoseEstimator.cpp  PoseEstimator.h  anyNonFinite.cpp  anyNonFinite.h  buildInfo.mat  chol.cpp  chol.h  cholPSD.cpp  cholPSD.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  extendedKalmanFilter.cpp  extendedKalmanFilter.h  linsolve.cpp  linsolve.h  mtimes.cpp  mtimes.h  peInterface.cpp  peInterface.h  peInterface_data.h  peInterface_initialize.cpp  peInterface_initialize.h  peInterface_rtw.mk  peInterface_terminate.cpp  peInterface_terminate.h  peInterface_types.h  qr.cpp  qr.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  (+40 more)
peInterface/examples/: main.cpp  main.h
peInterface/html/: report.mldatx
peInterface/interface/: _coder_peInterface_api.cpp  _coder_peInterface_api.h  _coder_peInterface_info.cpp  _coder_peInterface_info.h  _coder_peInterface_mex.cpp  _coder_peInterface_mex.h
src/: pose_estimation_node.cpp
